--- a/questiongame/src/Components/Games/LoveOMeterGame/GameLoveOMeterMain.css
+++ b/questiongame/src/Components/Games/LoveOMeterGame/GameLoveOMeterMain.css
@@ -36,7 +36,7 @@
     background-color: #2980b9;
 }
 
-.GameLOM button {
+.GameLOM .HomeButton button {
     position: fixed;
     bottom: 0;
     right: 0;
